changed float position

--- a/css/main.css
+++ b/css/main.css
@@ -234,7 +234,7 @@ body {
   }
   .icon {
     display: inline-block;
-    float: left;
+    float: right;
   }
 }
 @media only screen and (max-width: 800px) {
