--- a/css/main.css
+++ b/css/main.css
@@ -237,19 +237,41 @@ body {
     float: right;
   }
 }
+
 @media only screen and (max-width: 800px) {
   .lead-head {
-    font-size: 2.4em;
+    font-size: 5.4vw;
     overflow:hidden;
   }
   .lead-par {
-    font-size: 1.6em;
+    font-size: 3.6vw;
+  }
+  .header {
+    height: 3.7em;
+  }
+  .main h1 {
+    font-size: 3.8vw;
+  }
+  .main p, a, li {
+    font-size: 2.8vw;
+
+  }
+  .blog-main h1, h2 {
+    font-size: 3.8vw;
+  }
+  .blog-main p, a, li {
+    font-size: 2.8vw;
+  }
+  #navbar a {
+    font-size: 2.4vw;
+  }
+  #navbar p {
+    font-size: 3.4vw;
   }
   #button {
-    font-size: 1.4em;
+    font-size: 3.4vw;
   }
 }
-
 .content-lg {
   font-family: 'Merriweather', serif;
   margin: 30px auto;
