--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,7 @@ body {
   margin-bottom: 10px;
   overflow: hidden;
   background-color:  #ba1f33;
-  height: 55px;
+  height: 8.5vh;
   width: 80%;
 }
 .main {
@@ -118,7 +118,7 @@ body {
    color: White;
    text-align: center;
    min-width: 160px;
-   height: 25px;
+   height: 5vh;
    padding: 14px 16px;
    border-radius: 5px
    text-decoration: none;
@@ -151,7 +151,7 @@ body {
 .dropdown-content {
     display: none;
     position: absolute;
-    top: 68px;
+    top: 10.5vh;
     background-color: #ba1f33;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     border-radius: 5px;
@@ -247,9 +247,7 @@ body {
   .lead-par {
     font-size: 5.6vw;
   }
-  .header {
-    height: 3.7em;
-  }
+
   .main h1 {
     font-size: 3.8vw;
   }
@@ -280,13 +278,7 @@ body {
   .blog-main {
     width: 95%;
   }
-  .header {
-    width: 97%;
-    height: 20vh;
-  }
-  .dropdown-content {
-    top: 104px;
-  }
+
   #navbar {
     width: 80%;
     float: right;
