--- a/css/main.css
+++ b/css/main.css
@@ -111,6 +111,9 @@ body {
 .nav-bar {
   overflow: hidden;
 }
+.focus {
+  background-color: #100b00;
+}
 .nav-bar a {
   float: left;
    font-size: 1.4em;
@@ -276,6 +279,12 @@ body {
   }
   #button {
     font-size: 4.7vw;
+  }
+  @media screen and (orientation: landscape) {
+    .header {
+      min-height: 5vh; 
+    }
+
   }
 }
 @media only screen and (max-width: 480px) {
