--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,7 @@ body {
   background-size: 12%;;
 }
 .header {
+  top: 1.5vh;
   display: flex;
   justify-content: center;
   border-style: solid;
@@ -28,7 +29,7 @@ body {
   color: White;
   border-radius: 5px;
   margin: auto;
-  margin-bottom: 10px;
+  padding-bottom: 10px;
   overflow:hidden;
   background-color:  #ba1f33;
   height: 8.5vh;
@@ -147,7 +148,6 @@ body {
    text-align: center;
    padding: 14px 16px;
    position: relative;
-   display: inline-block;
    min-width: 170px;
    height: 25px;
    bottom: 22px;
@@ -159,6 +159,7 @@ body {
 .dropdown-content {
     display: none;
     position: absolute;
+    top: 10.2vh;
     overflow: visible;
     background-color: #ba1f33;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -175,20 +176,24 @@ body {
   text-decoration: none;
   display: block;
 }
-
-.dropdown:hover .dropdown-content {
+/*
+.dropdown:active .dropdown-content {
     display: block;
 }
-.horizontal:hover .horizontal-content {
+.horizontal:active .horizontal-content {
     display: block;
 }
+*/
 .nav-bar a:hover, .dropdown:hover {
   background-color: #100b00;
 }
+*/
 .main {
 
 }
 #lead {
+  position: relative;
+  top: 50px;
   height: 40%;
   width: 80%;
   margin: auto;
