--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
 }
 body {
   background-color: #242582;
- background-image: url("../img/masca1.png")/*, url("../img/cicero.jpeg*/;
+ background-image: url("../img/masca1.png")/*, url("../img/CiceroTullyTrans.png*/;
 /*  background-blend-mode:darken;
   background-repeat: repeat, no-repeat;
   background-position: top left, 67vw 15vh;
@@ -13,11 +13,11 @@ body {
 
 /* Class to show logo on content*/
 .background {
-  background-image: url("../img/cicero.jpeg");
+  background-image: url("../img/CiceroTullyTrans.png");
   background-blend-mode: darken;
   background-repeat: no-repeat;
   background-position: 98% 1vw;
-  background-size: 12%;;
+  background-size: 25%;;
 }
 .header {
   top: 1.5vh;
@@ -245,7 +245,7 @@ body {
 
 @media only screen and (max-width: 938px) {
   .header {
-    justify-content: flex-end;
+    justify-content: center;
   }
   .nav-bar a:not(.nav-excuse), .nav-bar div:not(.icon) {
     display: none;
@@ -311,12 +311,7 @@ body {
     width: 100%;
     margin: auto;
   }
-  #navbar p {
-    font-size: 5vw;
-  }
-  #navbar a {
-    font-size: 5vw;
-  }
+
 }
 
 @media only screen and (orientation: landscape) {
