image changes, cleanup

--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
 }
 body {
 background-color: #242582;
-background-image: url("../img/intersection.png")/*, url("../img/CiceroTullyTrans.png*/;
+background-image: url("../img/masca1.png")/*, url("../img/CiceroTullyTrans.png*/;
 background-repeat: repeat;
 padding-bottom: 100px;
 /*  background-blend-mode:darken;
