--- a/css/main.css
+++ b/css/main.css
@@ -115,14 +115,14 @@ padding-bottom: 100px;
   font-variant-caps: small-caps;
   list-style: none;
   text-align: center;
-  padding: 15px 0 12px 0;
+  padding: 0.5em 0 0.3em 0;
 }
 .active-page {
   background-color: #000;
 }
 .nav > li {
   display: inline-block;
-  padding-right: 50px;
+  padding-right: 1em;
 }
 
 .nav > li > a {
