--- a/css/main.css
+++ b/css/main.css
@@ -380,6 +380,41 @@ padding-bottom: 100px;
 
 }
 
+.video-container {
+  position:relative;
+	padding-bottom:56.25%;
+	padding-top:30px;
+	height:0;
+	overflow:hidden;
+}
+
+.video-container iframe, .video-container object, .video-container embed {
+	position:absolute;
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
+}
+
+
+.image-container
+{
+  position:relative;
+  padding-bottom:56.25%;
+	padding-top:30px;
+	height:0;
+	overflow:hidden;
+}
+
+.image-container img
+{
+  position:absolute;
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
+}
+
 /* Modal background */
 .modal {
   display: none;
