--- a/css/main.css
+++ b/css/main.css
@@ -110,8 +110,6 @@ padding-bottom: 100px;
   background-color: /*#936B60*/#1D2731;
   color: #ffffff;
   font-family: "Bellefair", serif;
-  font-size: 3.2em;
-  font-weight: 900;
   font-variant-caps: small-caps;
   list-style: none;
   text-align: center;
@@ -127,6 +125,7 @@ padding-bottom: 100px;
 
 .nav > li > a {
   text-decoration: none;
+  font-size: 3vw;
   color: #ffffff;
 }
 
