Adding PhD link button

--- a/css/main.css
+++ b/css/main.css
@@ -276,14 +276,15 @@ padding-bottom: 100px;
 
 #phdbutton {
   margin: auto;
+  margin-top: 3vw;
   font-size: 2.6vw;
   font-family: 'onclick Condensed', sans-serif;
-  background-color: #502F4C/*#a9e5bb*/;
+  background-color: #B02F4C/*#a9e5bb*/;
   color: black;
   position: relative;
   top: 70px;
   border-radius: 5px;
-  border: 1px solid black/*#888*/;
+  border: 1px solid #a9e5bb/*#888*/;
   box-shadow: 5px 10px 16px 20px rgba(3,2,2,0.2);
   cursor:pointer;
 }
